# house-temperature-core3

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose-local.yml  docker-compose.yml  nodemon.json  package.json  pom.xml  schema.sql  tsconfig.json
.github/workflows/: ci-cd.yml
container/: Dockerfile  compose.yml  docker-compose-local.yml
prisma/: .env  schema.prisma
scripts/: post.sh
src/: app.ts  index.ts  main.rs
src/__tests__/: app-test.ts
src/main/java/com/example/housetemperature/: HouseTemperatureApplication.java
src/main/java/com/example/housetemperature/config/: CorsConfig.java
src/main/java/com/example/housetemperature/controller/: TemperatureController.java
src/main/java/com/example/housetemperature/entity/: Weather.java
src/main/java/com/example/housetemperature/repository/: WeatherRepository.java
src/main/java/com/example/housetemperature/service/: TemperatureService.java
src/main/resources/: application.properties
